// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`beam router > replays a fixed run exactly (golden) 1`] = `
{
  "hash": "f654281d",
  "score": 250,
}
`;

exports[`courier > replays a fixed run exactly (golden) 1`] = `
{
  "hash": "48e91765",
  "score": 0,
}
`;

exports[`shifting rules > replays a fixed run exactly (golden) 1`] = `
{
  "hash": "ee962ec7",
  "score": 0,
}
`;
